[tool.poetry]
name = "v2lisluure"
version = "0.1.0"
description = ""
authors = ["Lauri Elias <lauri.elias@flowit.ee>"]

[tool.poetry.dependencies]
python = "^3.9"
langdetect = "^1.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

